Solucionados errores estilo

--- a/trabajos/consul-santiago/index.html
+++ b/trabajos/consul-santiago/index.html
@@ -84,7 +84,7 @@
                 <div class="col-sm-6 wow fadeInLeft">
                     <h2>Consul</h2>
                     <hr/>
-                    <p>Enreda ha desarrollado el Portal de Participación ciudadana del Ayuntamiento de Cádiz contando con el software más completo que existe actualmente, Consul. Usado por más de 60 ciudades a nivel mundial y premiado por Naciones Unidas. Este software permite la integración total con los sistemas Web del municipio y está preparado para generar todo tipo de procesos participativos..</p>
+                    <p>Enreda ha desarrollado el Portal de Participación ciudadana del Ayuntamiento de Santiago de Compostela contando con el  software más completo que existe actualmente, Consul. Usado por más de 60 ciudades a nivel mundial y premiado por Naciones Unidas. Este software permite la integración total con los sistemas Web del municipio y está preparado para generar todo tipo de procesos participativos...</p>
                     
                         <br>
                         <p>
