--- a/trabajos/formacion-ley-participacion/index.html
+++ b/trabajos/formacion-ley-participacion/index.html
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeft">
-                    <h2></h2>
+                    <h2>Formación sobre la Ley Andaluza de Participación</h2>
                     <hr/>
                     <p>Enreda ha desarrollado distintos jornadas de formación sobre la Ley Andaluza de Participación Ciudadana y su adaptación a nivel local y provincial para multitud de organismos públicos (Junta de Andalucía, FAMP, Ayuntamiento de Cádiz, Diputación de Cádiz…</p>
                     
