Dentro de cada Trabajo: Eliminadas descripciones de capturas

--- a/trabajos/consul-cadiz/index.html
+++ b/trabajos/consul-cadiz/index.html
@@ -88,7 +88,7 @@
                     
                 </div>
                 <div class="col-sm-6 text-center wow fadeInRight">
-                    <img src="/assets/images/works/screenshot-cadiz.png" alt="Captura de decide.cadiz.es" height="400" class="img-responsive" />
+                    <img src="/assets/images/works/screenshot-cadiz.png" alt=" " height="400" class="img-responsive" />
                 </div>
             </div>
         </div>
