--- a/trabajos/consul-santiago/index.html
+++ b/trabajos/consul-santiago/index.html
@@ -94,7 +94,7 @@
                     
                 </div>
                 <div class="col-sm-6 text-center wow fadeInRight">
-                    <img src="/assets/images/works/screenshot-santiago.png" alt="Captura de Consul - Santiago de Compostela" height="400" class="img-responsive" />
+                    <img src="/assets/images/works/screenshot-santiago.png" alt=" " height="400" class="img-responsive" />
                 </div>
             </div>
         </div>
