--- a/trabajos/formacion-ley-participacion/index.html
+++ b/trabajos/formacion-ley-participacion/index.html
@@ -94,7 +94,7 @@
                     
                 </div>
                 <div class="col-sm-6 text-center wow fadeInRight">
-                    <img src="/assets/images/works/formacion-LAP.png" alt="Captura de Formación sobre la Ley Andaluza de Participación" height="400" class="img-responsive" />
+                    <img src="/assets/images/works/formacion-LAP.png" alt=" " height="400" class="img-responsive" />
                 </div>
             </div>
         </div>
