--- a/trabajos/ayto-participacion-cadiz/index.html
+++ b/trabajos/ayto-participacion-cadiz/index.html
@@ -94,7 +94,7 @@
                     
                 </div>
                 <div class="col-sm-6 text-center wow fadeInRight">
-                    <img src="/assets/images/works/reglamento-ayto-cadiz.png" alt="Captura de Reglamento de Participación del Ayuntamiento de Cádiz" height="400" class="img-responsive" />
+                    <img src="/assets/images/works/reglamento-ayto-cadiz.png" alt=" " height="400" class="img-responsive" />
                 </div>
             </div>
         </div>
