--- a/trabajos/ciudad-amable/index.html
+++ b/trabajos/ciudad-amable/index.html
@@ -94,7 +94,7 @@
                     
                 </div>
                 <div class="col-sm-6 text-center wow fadeInRight">
-                    <img src="/assets/images/works/" alt="Captura de Participación para la planificación urbanística" height="400" class="img-responsive" />
+                    <img src="/assets/images/works/" alt=" " height="400" class="img-responsive" />
                 </div>
             </div>
         </div>
