--- a/trabajos/foro-participacion/index.html
+++ b/trabajos/foro-participacion/index.html
@@ -94,7 +94,7 @@
                     
                 </div>
                 <div class="col-sm-6 text-center wow fadeInRight">
-                    <img src="/assets/images/works/foro-demo-participativa.png" alt="Captura de Foro Andaluz de Gobiernos Locales y Procesos Participativos" height="400" class="img-responsive" />
+                    <img src="/assets/images/works/foro-demo-participativa.png" alt=" " height="400" class="img-responsive" />
                 </div>
             </div>
         </div>
