--- a/trabajos/presupuesto-tarifa/index.html
+++ b/trabajos/presupuesto-tarifa/index.html
@@ -94,7 +94,7 @@
                     
                 </div>
                 <div class="col-sm-6 text-center wow fadeInRight">
-                    <img src="/assets/images/works/tarifa.png" alt="Captura de Presupuesto Participativo de Tarifa" height="400" class="img-responsive" />
+                    <img src="/assets/images/works/tarifa.png" alt=" " height="400" class="img-responsive" />
                 </div>
             </div>
         </div>
