--- a/trabajos/somoscoop/index.html
+++ b/trabajos/somoscoop/index.html
@@ -94,7 +94,7 @@
                     
                 </div>
                 <div class="col-sm-6 text-center wow fadeInRight">
-                    <img src="/assets/images/works/screenshot-somoscoop.png" alt="Captura de Somos.coop" height="400" class="img-responsive" />
+                    <img src="/assets/images/works/screenshot-somoscoop.png" alt=" " height="400" class="img-responsive" />
                 </div>
             </div>
         </div>
