--- a/trabajos/tipi-ciudadano/index.html
+++ b/trabajos/tipi-ciudadano/index.html
@@ -96,7 +96,7 @@
                     
                 </div>
                 <div class="col-sm-6 text-center wow fadeInRight">
-                    <img src="/assets/images/works/screenshot-tipi.png" alt="Captura de TIPI Ciudadano" height="400" class="img-responsive" />
+                    <img src="/assets/images/works/screenshot-tipi.png" alt=" " height="400" class="img-responsive" />
                 </div>
             </div>
         </div>
